feat: expand miniapp tooling and account flows

--- a/frontend/miniapp/pages/login/login.wxml
+++ b/frontend/miniapp/pages/login/login.wxml
@@ -8,4 +8,8 @@
   <input class="input-box" placeholder="请输入密码" password value="{{password}}" bindinput="onPasswordInput" />
 
   <button class="btn" loading="{{loading}}" bindtap="onLogin">登录</button>
+  <view class="helper">
+    <text>还没有账号？</text>
+    <text class="link" bindtap="onGoRegister">立即注册</text>
+  </view>
 </view>
