--- a/frontend/miniapp/pages/login/login.wxml
+++ b/frontend/miniapp/pages/login/login.wxml
@@ -1,15 +1,9 @@
 <view class="card">
-  <view class="section-title">欢迎登录</view>
-  <view class="input-label">手机号</view>
-  <input class="input-box" placeholder="请输入 11 位手机号" type="number" maxlength="11"
-         value="{{phone}}" bindinput="onPhoneInput" />
-
-  <view class="input-label">密码</view>
-  <input class="input-box" placeholder="请输入密码" password value="{{password}}" bindinput="onPasswordInput" />
-
-  <button class="btn" loading="{{loading}}" bindtap="onLogin">登录</button>
+  <view class="section-title">微信一键登录</view>
+  <view class="desc">授权手机号即可使用全部工具，无需手动注册。</view>
+  <button class="btn" open-type="getPhoneNumber" loading="{{loading}}"
+          bindgetphonenumber="onGetPhoneNumber">授权手机号并登录</button>
   <view class="helper">
-    <text>还没有账号？</text>
-    <text class="link" bindtap="onGoRegister">立即注册</text>
+    <text>点击即表示同意《隐私政策》，手机号仅用于任务通知。</text>
   </view>
 </view>
