--- a/frontend/miniapp/pages/login/login.wxss
+++ b/frontend/miniapp/pages/login/login.wxss
@@ -69,14 +69,9 @@
   justify-content: center;
   font-size: 30rpx;
   border: none;
+  width: 100%;
 }
 
 .wechat-btn::after {
   border: none;
-}
-
-.wechat-icon {
-  width: 40rpx;
-  height: 40rpx;
-  margin-right: 16rpx;
 }
